manifest/xesite/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xesite
  annotations:
    keel.sh/policy: "all"
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@every 5m"
    keel.sh/match-tag: "true"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: xesite
  template:
    metadata:
      labels:
        app.kubernetes.io/name: xesite
      annotations:
        keel.sh/policy: "all"
        keel.sh/trigger: poll
        keel.sh/pollSchedule: "@every 5m"
        keel.sh/match-tag: "true"
    spec:
      volumes:
        - name: data
          emptyDir: {}
        - name: anubis
          configMap:
            name: anubis-cfg
        - name: anubis-data
          emptyDir: {}
      containers:
        - name: web
          image: ghcr.io/xe/site/bin:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: http
          volumeMounts:
            - mountPath: "/xe/data"
              name: data
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3001
              httpHeaders:
                - name: X-Kubernetes
                  value: "Is alright, I guess"
            initialDelaySeconds: 60
            periodSeconds: 5
            failureThreshold: 69
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3001
              httpHeaders:
                - name: X-Kubernetes
                  value: "Is alright, I guess"
            initialDelaySeconds: 30
            periodSeconds: 30
        - name: anubis
          image: ghcr.io/techarohq/anubis:main
          imagePullPolicy: Always
          volumeMounts:
            - name: anubis
              mountPath: /xe/cfg/anubis
            - name: anubis-data
              mountPath: /data
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
            requests:
              cpu: 250m
              memory: 128Mi
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
