manifest/xesite/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xesite
  labels:
    app.kubernetes.io/name: xesite
spec:
  selector:
    app.kubernetes.io/name: xesite
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  - port: 8080
    targetPort: 3001
    protocol: TCP
    name: internalapi
  - name: anubis
    port: 8081
    targetPort: 8081
    protocol: TCP
